--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
 .DS_Store
+._*
+.Spotlight-V100
+.Trashes
+
+*.tmp
+*.swp
+*~
+~$*
+
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+__pycache__/
+*.py[cod]
+.python-version
+venv/
+env/
+*.egg-info/
+dist/
+build/
+
+.ipynb_checkpoints/
+
+*.log
+*.sqlite
+
+*.class
+*.exe
+*.dll
+*.so
+*.o
+
+*.zip
+*.tar.gz
+*.7z
+
+*.aux
+*.out
+*.toc
